# ice-ocean-pattern-explorer

./: .gitignore  NSIDC-0756_BedMachineAntarctica_19700101-20191001_V04.1.nc.json  README.md  nsidc-download_NSIDC-0756.004_2026-03-03.py  pyproject.toml
app/: streamlit_app.py
notebooks/: 01_data_to_patterns.ipynb  02_physics_to_melt.ipynb
reports/: mini_report.md
scripts/: download_data.py  run_detection.py
src/ioblp/: __init__.py  cli.py  data.py  patterns.py  physics.py  pipeline.py  preprocess.py  viz.py
src/ioblp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_bedmachine_optional.py  test_data.py  test_patterns.py
